logs/nyamuk.log
Listing '.'...
Listing './bin'...
Listing './doc'...
Listing './doc/examples'...
Compiling './doc/examples/pubnya.py'...
***   File "./doc/examples/pubnya.py", line 15
    print "CONNACK received"
                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './doc/examples/simple_publish.py'...
***   File "./doc/examples/simple_publish.py", line 20
    print 'connection failed'; sys.exit(1)
                            ^
SyntaxError: invalid syntax

Compiling './doc/examples/simple_subscribe.py'...
***   File "./doc/examples/simple_subscribe.py", line 20
    print 'connection failed'; sys.exit(1)
                            ^
SyntaxError: invalid syntax

Compiling './doc/examples/subnya.py'...
***   File "./doc/examples/subnya.py", line 16
    print "CONNACK received"
                           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/nyamuk'...
Compiling './lib/python3.5/site-packages/nyamuk/base_nyamuk.py'...
***   File "./lib/python3.5/site-packages/nyamuk/base_nyamuk.py", line 155
    print "RETURN ERR_PROTOCOL"
                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/nyamuk/mqtt_pkt.py'...
***   File "./lib/python3.5/site-packages/nyamuk/mqtt_pkt.py", line 34
    print "-----MqttPkt------"
                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/nyamuk/nyamuk.py'...
***   File "./lib/python3.5/site-packages/nyamuk/nyamuk.py", line 120
    print "Received UNSUBSCRIBE"
                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/nyamuk/nyamuk_net.py'...
***   File "./lib/python3.5/site-packages/nyamuk/nyamuk_net.py", line 23
    except socket.herror as (_, msg):
                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/nyamuk-0.2.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
